--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,42 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import { date } from 'astro:schema';
+import Banner from '../components/Banner.astro';
 import Layout from '../layouts/Layout.astro';
+import GameCard from '../components/GameCard.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const postDestacados = [
+	{
+		title: "Post 1",
+		excerpt: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quos.",
+		featuredImage: "https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2874&q=80",
+		date: "April 1, 2023",
+		slug: "post-1",
+	},
+	{
+		title: "Post 2",
+		excerpt: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quos.",
+		featuredImage: "https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2874&q=80",
+		date: "April 1, 2023",
+		slug: "post-2",
+	},
+	{
+		title: "Post 3",
+		excerpt: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quos.",
+		featuredImage: "https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2874&q=80",
+		date: "April 1, 2023",
+		slug: "post-3",
+	},
+]
 ---
 
 <Layout>
-	<Welcome />
+	<Banner />
+	<section class="container mx-auto px-4 py-16  sm:px-6 lg:px-8">
+		<h2 class="mb-8 text-3xl text-center font-bold tracking-tight text-gray-900 sm:text-4xl">
+			Ultimos artículos
+		</h2>
+		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 lg:gap-8">
+			{postDestacados.map((post) => <GameCard {...post} />)}
+		</div>
+	</section>
 </Layout>
