--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,7 @@
 ---
+import { getPageInfo } from '../lib/wp';
 
+const { title, content } = await getPageInfo('bienvenida');
 ---
 
 <section class="bg-gray-900 text-white">
@@ -8,15 +10,11 @@
 		<h1
 			class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-5xl"
 		>
-			Understand User Flow.
-
-			<span class="sm:block"> Increase Conversion. </span>
+			{title}
 		</h1>
 
-		<p class="mx-auto mt-4 max-w-xl sm:text-xl/relaxed">
-			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt illo tenetur fuga ducimus
-			numquam ea!
-		</p>
+		<div class="mx-auto mt-4 max-w-xl sm:text-xl/relaxed" set:html={content}>
+		</div>
 
 		<div class="mt-8 flex flex-wrap justify-center gap-4">
 			<a
