Fetch para traernos los post más recientes del Wordpress

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,7 +1,7 @@
 ---
 import { getPageInfo } from '../lib/wp';
 
-const { title, content } = await getPageInfo('bienvenida');
+const { title, content, prueba } = await getPageInfo('bienvenida');
 ---
 
 <section class="bg-gray-900 text-white">
