--- a/src/components/GameCard.astro
+++ b/src/components/GameCard.astro
@@ -16,12 +16,8 @@ const { title, excerpt, featuredImage, date, slug } = Astro.props;
             src={featuredImage}
             class="h-64 w-full object-cover sm:h-80 lg:h-96"
         />
-        
         <h3 class="mt-4 text-lg font-bold text-gray-900 sm:text-xl">{title}</h3>
-        
-        <p class="mt-2 max-w-sm text-gray-700">
-            {excerpt}
-        </p>
+        <div class="mt-2 max-w-sm text-gray-700" set:html={excerpt}></div>
         <p class="mt-2 text-sm max-w-sm text-gray-700">
             {date}
         </p>
