--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,8 +11,8 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
-	<header class="bg-white">
+	<body class="flex flex-col min-h-screen">
+	<header class="flex-1 bg-white">
 		<div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
 			<div class="flex h-16 items-center justify-between">
 			<div class="flex-1 md:flex md:items-center md:gap-12">
