--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -13,7 +13,7 @@ export const prerender = false;
 
 <Layout>
     <article class="container mx-auto px-4 py-16 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold">{title}</h1>
-        <div class="mt-4 mx-auto" set:html={content}></div>
+        <h1 class="text-center text-3xl font-bold">{title}</h1>
+        <div class="mt-4 mx-auto max-w-3xl" set:html={content}></div>
     </article>
 </Layout>
